# repoicon

./: .dockerignore  .env.example  .gitignore  README.md  README_CN.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
docker/: backend.Dockerfile  frontend.Dockerfile
src/: App.tsx
src/services/: api.ts
src/types/: index.ts
